# chemistry-nao2gto

./: .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: dependencies.sh
src/: InputHandler.cpp  InputHandler.h  Orbital.cpp  Orbital.h
src/exceptions/: LoadException.h
tests/: InputHandlerTest.cpp  OrbitalTest.cpp  Test.cpp
tests/test_input/: input.ion.xml
